[project]
name = "jupyterlite-sphinx"
dynamic = ["version"]
description = "Sphinx extension for deploying JupyterLite"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "JupyterLite Contributors" },
]
dependencies = [
    "docutils",
    "jupyter_server",
    "jupyterlab_server",
    "jupyterlite-core >=0.1.0",
    "sphinx>=4",
]

docs = [
    "myst_parser",
    "sphinx-rtd-theme",
    "jupyterlite-xeus-python>=0.9.0,<0.10.0",
]

